# WasherBuddie

./: .gitignore  Dockerfile  Interaction_Manager.py  LICENSE  Machine.java  Machine.py  Machine_Manager.py  Notification.py  Notification_Manager.py  Notification_Sender.py  README.md  User.java  User.py  UserEvent.java  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deployment.yaml  tests.yaml
Service_Layer/: Interaction_Manager.py  Machine_Manager.py  Notification_Manager.py  Notification_Sender.py
Service_Layer_B/: Interaction_Manager.py  Machine.py  Notification_Manager.py  Notification_Sender.py  User.py
Tests/: test_Interaction_Manager.py  test_Machine.py  test_Machine_Manager.py  test_Notification.py  test_Notification_Manager.py  test_User.py  test_app.py
UI/: CreateAccount.js  app.css  app.js  login.js
mongoDB/: CRUD_api.py  env
src/Service_Layer/: Interaction_Manager.py  Machine.py  Machine_Manager.py  Notification_Manager.py  Notification_Sender.py  User.py  __init__.py
src/Service_Layer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
washer-buddie/: .gitignore  package-lock.json  package.json
washer-buddie/src/: App.css  App.js
washer-buddie/src/components/: CreateAccount.js  home.js  login.js
washerbuddie/: package-lock.json  package.json
washerbuddie/src/: Admin.js  App.css  App.js  CreateAccount.js  Header.css  Header.js  UserPreferences.js  forgotPassword.js  home.css  home.js  homePage.js  login.js  menu.css  menu.js
